--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.google.protobuf' version '0.8.8'
 }
 
 group 'com.netty.study'
@@ -17,7 +18,30 @@ dependencies {
     compile group: 'io.netty', name: 'netty-all', version: '4.1.10.Final'
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.3.1'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.3.1'
+    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.12.0'
+
+    implementation 'io.grpc:grpc-netty-shaded:1.24.0'
+    implementation 'io.grpc:grpc-protobuf:1.24.0'
+    implementation 'io.grpc:grpc-stub:1.24.0'
+
 }
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+}
+
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.9.0"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.24.0'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
 }
